<resources>
    <string name="app_name">MusicApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_library">Library</string>
    <string name="title_discovery">Discovery</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="image_button_description">image button description</string>
    <string name="title_albums_hot">Albums hot</string>
    <string name="image_desc">Song avatar</string>
    <string name="text_song_title">Song title</string>
    <string name="text_song_artist">Song artist</string>
    <string name="title_recommended">Recommended songs</string>
    <string name="title_detail_album">Detail album</string>
    <string name="title_song_list">Song list</string>
    <string name="text_playlist_num_of_song">Number of songs: %d</string>
    <string name="item_download">Download</string>
    <string name="item_add_to_favourites">Add to favorite</string>
    <string name="item_add_to_playlist">Add to playlist</string>
    <string name="item_add_to_queue">Add to play next</string>
    <string name="item_view_album">View album</string>
    <string name="item_view_artist">View artist</string>
    <string name="item_block">Block</string>
    <string name="item_report_error">Report error</string>
    <string name="item_view_song_information">View song information</string>
    <string name="text_song_detail_title">Title: %s</string>
    <string name="text_song_detail_artist">Artist: %s</string>
    <string name="text_song_detail_album">Album: %s</string>
    <string name="text_song_detail_duration">Duration: %d</string>
    <string name="text_song_detail_counter">Number of plays: %d</string>
    <string name="text_song_detail_replay_counter">Number of replay: %d</string>
    <string name="text_song_detail_favorite_status">Is your favorite song: %s</string>
    <string name="text_song_detail_genre">Genre: %s</string>
    <string name="text_song_detail_year">Publish year: %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_available">N/A</string>
</resources>