<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dialog.DialogSongInfoFragment">

    <ImageView
        android:id="@+id/image_detail_song_artwork"
        android:layout_width="@dimen/detail_song_artwork_width"
        android:layout_height="@dimen/detail_song_artwork_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_8"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_desc"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:background="@color/divider_color" />

    <TextView
        android:id="@+id/text_song_detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_artist"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_album"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_duration"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_counter"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_replay_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_replay_counter"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_favorite_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_favorite_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:text="@string/text_song_detail_genre"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/text_song_detail_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/text_song_detail_year"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>